mod_negotiation: preserve Query String in resolving a type map PR 33112.  Report with patch by Jørgen Thomsen. Attention called to it by Per Jessen.

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@565671 13f79535-47bb-0310-9956-ffa450edef68